Fix comment syntax

--- a/Cycles Strategy.ipynb
+++ b/Cycles Strategy.ipynb
@@ -494,7 +494,7 @@
    "outputs": [],
    "source": [
     "#Output image of directed graph\n",
-    "%matplotlib qt\n",
+    "# matplotlib qt\n",
     "\n",
     "#Open drawing, set colors, and determine board parameters\n",
     "drawing = nx.multipartite_layout(digraph, subset_key=\"layer\")\n",
