Update involves clearer code output and formatting

--- a/Cycles Strategy.ipynb
+++ b/Cycles Strategy.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "36f6d51f",
    "metadata": {},
    "outputs": [],
@@ -16,99 +16,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 29,
    "id": "92ada7bb",
    "metadata": {},
    "outputs": [],
    "source": [
     "start_time = time.time()\n",
     "\n",
-    "#Enter game table and change the name of the game table you want to run to \"table\"\n",
-    "table = [[[3],[2],[4]],[[0],[3],[1]],[[4],[1],[2]],[[1],[0],[3]]]\n",
-    "\n",
-    "squareAntiprism = [[[2],[0],[0],[4],[8],[0],[0],[0],[5],[0]],\n",
-    "        [[3],[7],[0],[0],[1],[8],[0],[0],[0],[0]],\n",
-    "        [[4],[2],[6],[0],[0],[0],[7],[0],[0],[0]],\n",
-    "        [[1],[0],[3],[5],[0],[0],[0],[6],[0],[0]],\n",
-    "        [[0],[0],[0],[1],[0],[0],[0],[4],[8],[6]],\n",
-    "        [[0],[0],[4],[0],[0],[0],[3],[5],[0],[7]],\n",
-    "        [[0],[3],[0],[0],[0],[2],[6],[0],[0],[8]],\n",
-    "        [[0],[0],[0],[0],[2],[7],[0],[0],[1],[5]]]\n",
-    "\n",
-    "smallerGrid = [[[2],[0],[0],[0],[4]],\n",
-    "        [[5],[3],[0],[0],[1]],\n",
-    "        [[0],[6],[0],[0],[2]],\n",
-    "        [[1],[0],[5],[0],[7]],\n",
-    "        [[4],[2],[8],[6],[0]],\n",
-    "        [[0],[5],[0],[9],[3]],\n",
-    "        [[0],[0],[4],[0],[8]],\n",
-    "        [[0],[0],[7],[5],[9]],\n",
-    "        [[0],[0],[0],[8],[6]]]\n",
-    "\n",
-    "largerGrid = [[[2],[0],[0],[0],[0],[4]],\n",
-    "        [[5],[3],[0],[0],[0],[1]],\n",
-    "        [[0],[6],[0],[0],[10],[2]],\n",
-    "        [[1],[0],[5],[0],[0],[7]],\n",
-    "        [[4],[2],[8],[6],[0],[0]],\n",
-    "        [[0],[5],[0],[9],[3],[11]],\n",
-    "        [[0],[0],[4],[0],[0],[8]],\n",
-    "        [[0],[0],[7],[5],[0],[9]],\n",
-    "        [[0],[0],[0],[8],[0],[6]],\n",
-    "        [[0],[0],[0],[0],[11],[3]],\n",
-    "        [[0],[0],[0],[0],[6],[10]]]\n",
-    "\n",
-    "posterBoard = [[[5],[0],[2],[4]],[[0],[0],[3],[1]],[[0],[0],[4],[2]],[[1],[0],[5],[3]],\n",
+    "#Enter game table\n",
+    "table = [[[5],[0],[2],[4]],[[0],[0],[3],[1]],[[0],[0],[4],[2]],[[1],[0],[5],[3]],\n",
     "         [[4],[6],[1,7],[0]],[[0],[7],[5],[0]],[[0],[5],[6],[0]]]\n",
     "\n",
-    "adaptedPosterBoard = [[[5],[0],[2],[4]],\n",
-    "        [[0],[0],[8],[1]],\n",
-    "        [[0],[0],[4],[8]],\n",
-    "        [[1],[0],[5],[3]],\n",
-    "        [[4],[6],[1,7],[0]],\n",
-    "        [[0],[7],[5],[0]],\n",
-    "        [[0],[5],[6],[0]],\n",
-    "        [[0],[0],[3],[2]]]\n",
-    "\n",
-    "doubleTriangle = [[[5],[7],[9],[2,6,8]],[[1],[0],[0],[3]],[[2],[0],[0],[4]],\n",
-    "                  [[3],[0],[0],[5]],[[4],[0],[0],[1]],[[0],[1],[0],[7]],\n",
-    "                  [[0],[6],[0],[1]],[[0],[0],[1],[9]],[[0],[0],[8],[1]]]\n",
-    "\n",
-    "OGtable = [[[5],[7],[2,6]],[[1],[0],[3]],[[2],[0],[4]],[[3],[0],[5]],\n",
-    "                    [[4],[0],[1]],[[0],[1],[7]],[[0],[6],[1]]]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "6b896345",
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "#Convert table to zero-based numbering\n",
     "for i in range(len(table)):\n",
     "    for j in range(len(table[i])):\n",
     "        for k in range(len(table[i][j])):\n",
-    "            table[i][j][k] -= 1\n",
-    "\n",
+    "            table[i][j][k] -= 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "c9be63c1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "#Create necessary lists and dictionaries\n",
     "mapping = {}\n",
     "reverseMapping = {}\n",
     "\n",
     "boards = [[]]\n",
-    "illegal = []\n",
-    "cycles = []\n",
     "\n",
-    "emptyBoard = []\n",
-    "digraph = nx.DiGraph()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "c9be63c1",
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "#Get moves from the table by iterating through values in the table\n",
     "for i in range(len(table)):\n",
     "    for j in range(len(table[i])):\n",
@@ -130,10 +68,20 @@
     "                if endPoint not in mapping.keys():\n",
     "                    mapping[startPoint] = endPoint\n",
     "                    reverseMapping[endPoint] = startPoint\n",
-    "                    boards.append([])\n",
-    "                    emptyBoard.append(0)\n",
-    "\n",
+    "                    boards.append([])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "b8f8089c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "#Get sinks/sources from the table\n",
+    "illegal = []\n",
+    "cycles = []\n",
+    "\n",
     "for i in range(len(table)):\n",
     "    source = emptyBoard.copy()\n",
     "    sink = emptyBoard.copy()\n",
@@ -180,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 32,
    "id": "d4de0d83",
    "metadata": {},
    "outputs": [
@@ -188,9 +136,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "End Time:   0.072 seconds\n",
+      "Total combinations to consider:  243\n",
       "\n",
-      "Total legal boards: 133\n"
+      "Combinations: Time (seconds)\n",
+      "End Time:   0.523 seconds\n",
+      "\n"
      ]
     }
    ],
@@ -198,12 +148,18 @@
     "#Consider all possible boards by creating a list that is the length of the number of edges in \n",
     "# the table and considering all permutations with repetition where a 0 represents the edge being \n",
     "# unmarked, a 1 from the first entry in the mapping to the second, and a -1 in the oppposite direction\n",
+    "print(\"Total combinations to consider: \", len(list(it.product([0,1,-1], repeat = len(mapping)))))\n",
+    "print()\n",
+    "print(\"Combinations: Time (seconds)\")\n",
+    "\n",
+    "digraph = nx.DiGraph()\n",
+    "\n",
     "num = 1\n",
     "for combination in it.product([0,1,-1],repeat = len(mapping)):\n",
     "    \n",
     "    #Program running update\n",
-    "    if num % 1000000 == 0:\n",
-    "        print(num, \": {:.3f} seconds\".format(time.time() - start_time), sep = \"\")\n",
+    "    if num % 100000 == 0:\n",
+    "        print(num, \": {:.3f}\".format(time.time() - start_time), sep = \"\")\n",
     "    \n",
     "    #Check for sinks/sources by checking if board is equal to all nonzero entries of a sink/source\n",
     "    legal = True\n",
@@ -244,18 +200,12 @@
     "    num += 1\n",
     "\n",
     "print(\"End Time: \", \" {:.3f} seconds\".format(time.time() - start_time))\n",
-    "print()\n",
-    "\n",
-    "#Calculate how many legal boards there are\n",
-    "sum = 0\n",
-    "for i in range(len(boards)):\n",
-    "    sum += len(boards[i])\n",
-    "print(\"Total legal boards:\",sum)"
+    "print()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 33,
    "id": "54812f01",
    "metadata": {},
    "outputs": [
@@ -263,20 +213,29 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Time:   0.093 seconds\n"
+      "Total legal boards: 133\n",
+      "\n",
+      "Boards: Time (seconds)\n",
+      "Time:   0.699 seconds\n"
      ]
     }
    ],
    "source": [
+    "#Calculate how many legal boards there are\n",
+    "print(\"Total legal boards:\", len(digraph.nodes))\n",
+    "print()\n",
+    "\n",
     "#Add edges to digraph by checking every node\n",
+    "print(\"Boards: Time (seconds)\")\n",
+    "\n",
     "num = 0\n",
     "for i in range(len(mapping)):\n",
     "    for board in boards[i]:\n",
     "        \n",
     "        #Program running update\n",
     "        num += 1\n",
-    "        if num % 1000 == 0:\n",
-    "            print(num, \": {:.3f} seconds\".format(time.time() - start_time), sep = \"\")\n",
+    "        if num % 100000 == 0:\n",
+    "            print(num, \": {:.3f}\".format(time.time() - start_time), sep = \"\")\n",
     "        \n",
     "        #Only add edges to boards without cycles\n",
     "        if digraph.nodes[board][\"position\"] == \"\":\n",
@@ -298,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 34,
    "id": "e82f29ec",
    "metadata": {},
    "outputs": [
@@ -306,27 +265,27 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0\n",
-      "1\n",
-      "2\n",
-      "3\n",
-      "4\n",
-      "5\n",
-      "Time:   0.136 seconds\n"
+      "Total legal boards: 133\n",
+      "\n",
+      "Boards: Time (seconds)\n",
+      "Time:   0.887 seconds\n"
      ]
     }
    ],
    "source": [
     "#Label the nodes in the digraph as n and p positions starting at the end of the game\n",
+    "print(\"Total legal boards:\", len(digraph.nodes))\n",
+    "print()\n",
+    "print(\"Boards: Time (seconds)\")\n",
+    "\n",
     "num = 0\n",
     "for i in range(len(boards)):\n",
-    "    print(i)\n",
     "    for board in boards[len(boards) - i - 1]:\n",
     "        \n",
     "        #Program running update\n",
     "        num += 1\n",
-    "        if num % 1000000 == 0:\n",
-    "            print(num, \": {:.3f} seconds\".format(time.time() - start_time), sep = \"\")\n",
+    "        if num % 100000 == 0:\n",
+    "            print(num, \": {:.3f}\".format(time.time() - start_time), sep = \"\")\n",
     "        \n",
     "        #Remove nodes with an in-degree of zero because they cannot be reached without the game already ending\n",
     "        if digraph.in_degree(board) == 0 and i != len(boards) - 1:\n",
@@ -356,7 +315,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 35,
+   "id": "f321c550",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Player 1 has a winning strategy\n"
+     ]
+    }
+   ],
+   "source": [
+    "emptyBoard = []\n",
+    "for i in range(len(mapping)):\n",
+    "    emptyBoard.append(0)\n",
+    "\n",
+    "if digraph.nodes[tuple(emptyBoard)][\"position\"] == \"n\":\n",
+    "    print(\"Player 1 has a winning strategy\")\n",
+    "else:\n",
+    "    print(\"Player 2 has a winning strategy\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
    "id": "12a03251",
    "metadata": {},
    "outputs": [
@@ -375,7 +359,7 @@
       "((0, 0, 0, 0, 0), (0, 0, 0, 0, 1)) \t n\n",
       "((0, 0, 0, 0, 0), (0, 0, 0, 0, -1)) \t n\n",
       "\n",
-      "Minimum Time:   0.155 seconds\n"
+      "Total Runtime:   1.589 seconds\n"
      ]
     }
    ],
@@ -385,143 +369,24 @@
     "    print(edge, \"\\t\", digraph.nodes[edge[1]][\"position\"])\n",
     "    \n",
     "print()\n",
-    "print(\"Minimum Time: \", \" {:.3f} seconds\".format(time.time() - start_time))"
+    "print(\"Total Runtime: \", \" {:.3f} seconds\".format(time.time() - start_time))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "35702e8a",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2\n"
-     ]
-    }
-   ],
-   "source": [
-    "#Calculate maximum number of unmarkable edges by counting unmarkable edges in all terminal states\n",
-    "maxUnmarkable = 0\n",
-    "for node in digraph.nodes:\n",
-    "    \n",
-    "    #Count unmarkable edges of terminal states\n",
-    "    if digraph.out_degree(node) == 0:\n",
-    "        unmarkable = 0\n",
-    "        for i in range(len(mapping)):\n",
-    "            if node[i] == 0:\n",
-    "                unmarkable += 1\n",
-    "                \n",
-    "        #Change maxUnmarkable if greater\n",
-    "        if unmarkable > maxUnmarkable:\n",
-    "            maxUnmarkable = unmarkable\n",
-    "print(maxUnmarkable)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "id": "8bfcd66a",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[(0, 0, 0, 0, 0)]\n",
-      "1\n",
-      "\n",
-      "[(0, 0, 0, 0, 1), (0, 0, 0, 0, -1), (0, 0, 0, 1, 0), (0, 0, 0, -1, 0), (0, 0, 1, 0, 0), (0, 0, -1, 0, 0), (0, 1, 0, 0, 0), (0, -1, 0, 0, 0)]\n",
-      "8\n",
-      "\n",
-      "[(0, 0, 1, 0, -1), (0, 0, 1, 1, 0), (0, 0, -1, 0, 1), (0, 0, -1, -1, 0), (0, 1, 0, 0, -1), (0, 1, 0, 1, 0), (0, -1, 0, 0, 1), (0, -1, 0, -1, 0), (1, 0, 0, 0, 1), (1, 0, 0, 0, -1), (1, 0, 0, 1, 0), (1, 0, 0, -1, 0), (1, 0, 1, 0, 0), (1, 0, -1, 0, 0), (1, 1, 0, 0, 0), (1, -1, 0, 0, 0), (-1, 0, 0, 0, 1), (-1, 0, 0, 0, -1), (-1, 0, 0, 1, 0), (-1, 0, 0, -1, 0), (-1, 0, 1, 0, 0), (-1, 0, -1, 0, 0), (-1, 1, 0, 0, 0), (-1, -1, 0, 0, 0)]\n",
-      "24\n",
-      "\n",
-      "[(0, 0, 1, 1, -1), (0, 0, 1, -1, -1), (0, 0, -1, 1, 1), (0, 0, -1, -1, 1), (0, 1, 0, 1, 1), (0, 1, 0, 1, -1), (0, 1, 1, 0, -1), (0, 1, 1, 1, 0), (0, 1, -1, 0, 1), (0, 1, -1, 1, 0), (0, -1, 0, -1, 1), (0, -1, 0, -1, -1), (0, -1, 1, 0, -1), (0, -1, 1, -1, 0), (0, -1, -1, 0, 1), (0, -1, -1, -1, 0), (1, 0, 0, 1, 1), (1, 0, 0, -1, -1), (1, 0, 1, -1, 0), (1, 0, -1, 1, 0), (1, 1, 0, 0, 1), (1, 1, -1, 0, 0), (1, -1, 0, 0, -1), (1, -1, 1, 0, 0), (-1, 0, 0, 1, 1), (-1, 0, 0, -1, -1), (-1, 0, 1, -1, 0), (-1, 0, -1, 1, 0), (-1, 1, 0, 0, 1), (-1, 1, -1, 0, 0), (-1, -1, 0, 0, -1), (-1, -1, 1, 0, 0)]\n",
-      "32\n",
-      "\n",
-      "[]\n",
-      "0\n",
-      "\n",
-      "[]\n",
-      "0\n",
-      "\n",
-      "[]\n",
-      "0\n",
-      "\n",
-      "[]\n",
-      "0\n",
-      "\n",
-      "[]\n",
-      "0\n",
-      "\n",
-      "[]\n",
-      "0\n",
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "ns = [[],[],[],[],[],[],[],[],[],[]]\n",
-    "for node in digraph.nodes:\n",
-    "    if digraph.nodes[node][\"position\"] == \"n\":\n",
-    "        onlyP = True\n",
-    "        marked = 0\n",
-    "        for edge in digraph.edges(node):\n",
-    "            if digraph.nodes[edge[1]][\"position\"] == \"n\":\n",
-    "                onlyP = False\n",
-    "\n",
-    "        if onlyP == False:\n",
-    "            for item in node:\n",
-    "                if item != 0:\n",
-    "                    marked += 1\n",
-    "\n",
-    "            ns[marked].append(node)\n",
-    "\n",
-    "for i in range(10):\n",
-    "    print(ns[i])\n",
-    "    print(len(ns[i]))\n",
-    "    print()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "id": "eac043a8",
+   "execution_count": 43,
+   "id": "3a50d794",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Output image of directed graph\n",
-    "%matplotlib qt\n",
+    "#Uncomment the following code to output image of directed graph\n",
     "\n",
-    "#Open drawing, set colors, and determine board parameters\n",
-    "drawing = nx.multipartite_layout(digraph, subset_key=\"layer\")\n",
-    "color_map = [(255/255, 184/255, 28/255) if digraph.nodes[node][\"position\"] == \"p\" else (65/255, 65/255, 65/255) for node in digraph] \n",
-    "nx.draw_networkx(digraph, pos=drawing, node_size = 50, with_labels=False, node_color= color_map)\n",
+    "#drawing = nx.multipartite_layout(digraph, subset_key=\"layer\")\n",
+    "#color_map = [(255/255, 184/255, 28/255) if digraph.nodes[node][\"position\"] == \"p\" else (65/255, 65/255, 65/255) for node in digraph] \n",
+    "#nx.draw_networkx(digraph, pos=drawing, node_size = 50, with_labels=False, node_color= color_map)\n",
     "\n",
-    "#Save figure as pdf and show on screen\n",
-    "plt.savefig('digraph.pdf')\n",
-    "plt.figure(figsize=(12,12))\n",
-    "plt.rcParams['figure.figsize'] = [12,12]"
+    "#plt.figure(figsize=(12,12))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "facc04cc",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3ba2a581",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
