--- a/Cycles Strategy.ipynb
+++ b/Cycles Strategy.ipynb
@@ -74,13 +74,17 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "b8f8089c",
+   "id": "22452fc0",
    "metadata": {},
    "outputs": [],
    "source": [
     "#Get sinks/sources from the table\n",
     "illegal = []\n",
     "cycles = []\n",
+    "\n",
+    "emptyBoard = []\n",
+    "for i in range(len(mapping)):\n",
+    "    emptyBoard.append(0)\n",
     "\n",
     "for i in range(len(table)):\n",
     "    source = emptyBoard.copy()\n",
@@ -316,7 +320,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "f321c550",
+   "id": "3839beb9",
    "metadata": {},
    "outputs": [
     {
@@ -328,10 +332,7 @@
     }
    ],
    "source": [
-    "emptyBoard = []\n",
-    "for i in range(len(mapping)):\n",
-    "    emptyBoard.append(0)\n",
-    "\n",
+    "#Determine which player has a winning strategy\n",
     "if digraph.nodes[tuple(emptyBoard)][\"position\"] == \"n\":\n",
     "    print(\"Player 1 has a winning strategy\")\n",
     "else:\n",
@@ -375,7 +376,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "3a50d794",
+   "id": "18c18a27",
    "metadata": {},
    "outputs": [],
    "source": [
